feat(login): add login UI with form, remember me, and cubit-based using MVI pattern

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,7 @@
 {
   "emailVerification": "Email verification",
-  "emailVerification2": "Email verification"
+  "emailVerification2": "Email verification",
+  "rememberMe": "Remember me",
+  "forgotPassword?": "Forgot Password?"
 
 }
