--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,6 +1,6 @@
 {
   "emailVerification": "تأكيد البريد الإلكتروني",
-  "emailVerification2": "تأكيد البريد الإلكتروني"
-
+  "emailVerification2": "تأكيد البريد الإلكتروني",
+  "rememberMe": "تذكرني"
 
 }
