--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -14,6 +14,8 @@
   "enterPhoneNumber": "Enter phone number",
   "femaleGender": "Female",
   "maleGender": "Male",
+  "femaleValue": "female",
+  "maleValue": "male",
   "createAccount": "Create an account, you agree to our Terms & Conditions",
   "alreadyHaveAccount": "Already have an account?",
   "login": "Login",
@@ -32,5 +34,10 @@
   "firstNameRequired": "First name is required",
   "lastNameRequired": "Last name is required",
   "nameInvalid": "Name must be 3-20 characters",
-  "genderRequired": "Gender is required"
+  "genderRequired": "Gender is required",
+  "loading": "Loading...",
+  "registrationSuccessful": "Registration Successful",
+  "ok": "OK",
+  "error": "Error",
+  "success": "Success"
 }
