--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -82,6 +82,7 @@
   "invalidName": "Invalid name",
   "phoneNumber": "Phone number",
   "passwordUpdated": "Password Updated Successfully",
-  "addToCard": "Add to card"
-
+  "addToCard": "Add to card",
+  "allPricesIncludeTax": "All prices include tax",
+  "productAddedToCart": "Product Added To Cart"
 }
