Add default_error_widget.dart. Localize occasion page. Fix getProducts method to send occasion id. Add pretty dio logger. Added shimmer loading.

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -87,6 +87,8 @@
   "search": "بحث",
   "categories": "الفئات",
   "bestSelling": "الأكثر مبيعًا",
-  "occasions": "المناسبات"
+  "occasions": "المناسبات",
+  "something_went_wrong": "حدث خطأ ما",
+  "no_products_found": "لم يتم العثور على منتجات"
 
 }
