--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,7 +17,7 @@
   "femaleValue": "female",
   "maleValue": "male",
   "createAccount": "Create an account, you agree to our ",
-  "termsAndConditions" : "Terms&Conditions",
+  "termsAndConditions": "Terms&Conditions",
   "alreadyHaveAccount": "Already have an account? ",
   "login": "Login",
   "signup": "Sign Up",
@@ -87,6 +87,7 @@
   "search": "Search",
   "categories": "Categories",
   "bestSelling": "Best Selling",
-  "occasions": "Occasions"
-
+  "occasions": "Occasions",
+  "something_went_wrong": "Something went wrong",
+  "no_products_found": "No products found"
 }
