Solve pr comments -delete increased spaces -refactor variable name -add text to localization

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -83,6 +83,7 @@
   "phoneNumber": "Phone number",
   "passwordUpdated": "Password Updated Successfully",
   "addToCard": "Add to card",
-  "search" : "Search"
+  "search" : "Search",
+  "noProductsfound" : "No Products found"
 
 }
