feat(SCRUM-42): implement update cart item quantity functionality and update related UI components

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -101,5 +101,6 @@
   "deliveryFee": "رسوم التوصيل",
   "total": "المجموع",
   "checkout": "الدفع",
-  "productDeletedSuccessfully": "تم حذف المنتج بنجاح"
+  "productDeletedSuccessfully": "تم حذف المنتج بنجاح",
+  "productUpdated": "تم تحديث المنتج"
 }
