--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -82,7 +82,7 @@
   "invalidName": "Invalid name",
   "phoneNumber": "Phone number",
   "passwordUpdated": "Password Updated Successfully",
-  "addToCard": "Add to card",
+  "addToCard": "Add to cart",
   "noProductsfound" : "No Products found",
   "viewAll": "View All",
   "search": "Search",
