--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -111,7 +111,7 @@
   "change_language": "تغيير اللغة",
   "arabic": "العربية",
   "english": "الإنجليزية",
-  "initialSearchMsg" : "ابحث عن المنتج الذي تريده",
+  "initialSearchMsg": "ابحث عن المنتج الذي تريده",
   "welcomeMessage": "مرحبًا بك في متجر Flowery",
   "home": "الرئيسية",
   "profile": "الملف الشخصي",
@@ -123,7 +123,7 @@
   "register": "تسجيل",
   "pleaseLoginToAccessProfile": "يرجى تسجيل الدخول للوصول إلى ملفك الشخصي",
   "aboutUs": "من نحن",
-  "language": "اللغة",
+  "language": "الغة",
   "notifications": "الإشعارات",
   "savedAddresses": "العناوين المحفوظة",
   "myOrders": "طلباتي",
@@ -185,6 +185,10 @@
   "highestPrice": "السعر الأعلى",
   "newest": "الأحدث",
   "oldest": "الأقدم",
-  "filter": "تصفية"
-
+  "filter": "تصفية",
+  "active": "نشط",
+  "completed": "مكتمل",
+  "no_orders_found": "لا توجد طلبات",
+  "track_order": "تتبع الطلب",
+  "order_number": "رقم الطلب#"
 }
